hphp/hack/test/typecheck/expression_trees/splice_infer.php.like_types.exp
File "splice_infer.php", line 10, characters 13-17:
Typing error (Typing[4110])
  File "splice_infer.php", line 10, characters 13-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 14, characters 6-39:
  But got `dynamic` because it is an unenforceable type
File "splice_infer.php", line 10, characters 21-25:
Typing error (Typing[4110])
  File "splice_infer.php", line 10, characters 21-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 14, characters 6-39:
  But got `dynamic` because it is an unenforceable type
